# Varonis_SaaS_API_Core

./: README.md  setup.cfg
src/varonis_saas_core/: __init__.py  attributes.py  builders.py  client.py  config.py  constants.py  errors.py  mappers.py  utils.py
tests/: test_builders.py  test_contract_guards.py  test_mappers.py  test_smoke.py  test_translation_shape.py
