[metadata]
name = varonis-saas-core
version = 1.0.3
author = Mod26y
description = Platform-agnostic core API for Varonis SaaS integrations
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-2.1-or-later
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    urllib3>=1.26

[options.packages.find]
where = src
